Bug 687396 - PDF Conversion of PS doc fails with large image
Summary: PDF Conversion of PS doc fails with large image
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.14
Hardware: PC Windows XP
: P2 normal
Assignee: Igor Melichev
URL:
Keywords:
: 687462 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-03-30 12:01 UTC by Scott Pascoe
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
PS output from Word (1.08 MB, application/postscript)
2004-03-30 12:02 UTC, Scott Pascoe
Details
PDF output of gsview convert (137.23 KB, application/octet-stream)
2004-03-30 12:03 UTC, Scott Pascoe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Pascoe 2004-03-30 12:01:04 UTC
I received a word document and upon conversion, the seventh page cannot be 
rendered by Acrobat Reader.  I cut the document down until it was only the 
picture on that page.  The picture does not render correctly.
Comment 1 Scott Pascoe 2004-03-30 12:02:39 UTC
Created attachment 599 [details]
PS output from Word

Example input
Comment 2 Scott Pascoe 2004-03-30 12:03:31 UTC
Created attachment 600 [details]
PDF output of gsview convert

Example failing output from GSView 4.6
Comment 3 Jack Moffitt 2004-04-01 08:08:01 UTC
What exactly is wrong?  I looks fine for me with CVS HEAD.  Does the problem
appear only when viewing with Acrobat Reader?
Comment 5 Alex Cherepanov 2004-05-13 04:30:11 UTC
*** Bug 687462 has been marked as a duplicate of this bug. ***